[tool.poetry]
name = "backend-takehome"
version = "0.1.5" 
description = ""
authors = ["MukeshKummuru <mukesh.kummuru@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_takehome"}]  

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.3"
pandas = "^2.2.3"
lxml = "^5.3.1"
rich = "^13.9.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "backend_takehome.cli:main"
